# CLP_test_suite

./: README.md  compile_commands.json
clp_test_suite/: README.md  SYNTAX.md  compile_commands.json  meson.build
clp_test_suite/include/: executor.h  tok_vec.h  token.h
clp_test_suite/src/: lexer.c  parser.c  tok_vec.c
clp_test_suite/tests/: test-lexer.cpp  test-parser.cpp  test-tok-vec.cpp
include/: lexer.h  parser.h  token.h
maths/addition_lineaire/: script.py
mycat/with_mmap/: Makefile  mycat.c  mycat.h
mycat/with_stdio/: mycat  mycat.c  mycat.h
mycat/without_stdio/: mycat.c  mycat.h
src/: lexer.c  tok_vec.c
tests/: test-tok-vec.cpp  utils.h
